# n64tex-python

./: .gitignore  README.md  pyproject.toml
src/n64tex/: __init__.py
src/n64tex/formats/: __init__.py  base.py  ci4.py  ci8.py  i4.py  i4a.py  i8.py  i8a.py  rgba.py  rgba5551.py
tests/: test_n64tex.py
